crates/diman_unit_system/tests/compile_fail/type_mismatch_mul_type_quantity.stderr
error[E0271]: type mismatch resolving `<Quantity<f64, Dimension> as Mul<f64>>::Output == ()`
 --> tests/compile_fail/type_mismatch_mul_type_quantity.rs:7:40
  |
7 |     let x: () = dimensionless.new(1.0) * 1.0;
  |                                        ^ expected `()`, found `Quantity<f64, Dimension>`
  |
  = note: expected unit type `()`
                found struct `Quantity<f64, Dimension>`
